# OxideMC

./: .gitignore  Cargo.toml  README.md  presets.json
.github/workflows/: nightly.yml  release.yml
src/: config.rs  download.rs  main.rs  mods.rs  preset.rs  server.rs  tests.rs  utils.rs
