[package]
name = "OxideMC"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "oxidemc"
path = "src/main.rs"

[dependencies]
cliclack = "0.3.9"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["blocking", "stream"] }
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"] }
shellexpand = "3.1"
