[package]
name = "OxideMC" 
version = "0.0.4"
edition = "2021"

[[bin]]
name = "OxideMC"
path = "src/main.rs"

[dependencies]
cliclack = "0.4.1"
reqwest = { version = "0.13.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0"
ferinth = "2"
furse = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }

[dev-dependencies]
tempfile = "3"
